# xanki

./: .gitignore  .jj-close-smoke-default.txt  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cursor/: worktrees.json
docs/: dev-app-shell.md  dev-cloud.md  dev-dialogs-overlays.md  dev-home.md  dev-jj.md  dev-library.md  dev-mask-editor.md  dev-mobile.md  dev-settings-auth.md  dev-study-hub.md  dev-study-layout.md  dev-ui.md
mobile/: .env.example  README.md  capacitor.config.ts  index.html  package.json  tsconfig.json  vite.config.ts
scripts/: build-ios.sh  check-design-tokens.sh  check-dev-secrets.sh  close-jj-workspace.sh  dev-cloud.sh  dev-ios.sh  materialize-dev-vars.sh  push-jj-main.sh  (+5 more)
xanki/src-tauri/: Cargo.toml  tauri.conf.json
xanki/src-tauri/capabilities/: default.json
xanki/src-tauri/icons/: icon.icns
xanki/src-tauri/migrations/: 001_init.sql  002_starred.sql  003_qa_answer.sql  004_cloud_prep.sql  005_sync_ms.sql
xanki/src-tauri/sidecar/ocr/: build.sh  main.swift  xanki-ocr-aarch64-apple-darwin
xanki/src-tauri/src/: error.rs  lib.rs  main.rs  models.rs  state.rs
xanki/src-tauri/src/capture/: mod.rs  region.rs
xanki/src-tauri/src/clipboard/: mod.rs
xanki/src-tauri/src/cloud/: auth_loopback.rs  mod.rs
xanki/src-tauri/src/commands/: cloud.rs  mod.rs
xanki/src-tauri/src/db/: mod.rs  repos.rs  sync.rs
xanki/src-tauri/src/image_store/: mod.rs
xanki/src-tauri/src/ocr/: mod.rs
xanki/src-tauri/src/permissions/: mod.rs
xanki/src-tauri/src/scheduler/: mod.rs
xanki/src-tauri/src/windows/: mod.rs
(+191 files in other folders)
