[package]
name = "xanki"
version = "0.1.0"
description = "Masking flashcard app for macOS"
authors = ["souic"]
edition = "2021"

[lib]
name = "xanki_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v7", "serde"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "time"] }
enigo = "0.3"
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
